--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -8,7 +8,7 @@
     <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
     <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
     <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
-    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
+    <a class="btn btn-sm btn-outline-danger" href="{% url 'logout' %}">Log Out</a>
     <hr>
 
     <div id="emails-view">
@@ -27,7 +27,7 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input type="submit" class="my-2 btn btn-primary"/>
         </form>
     </div>
 {% endblock %}
