--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -8,10 +8,11 @@
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
+    <div class="register">
+        <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
+            <input autofocus class="form-control" type="email" name="email" placeholder="Email Address">
         </div>
         <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
@@ -19,9 +20,11 @@
         <div class="form-group">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Register">
+        <input class="btn btn-dark" type="submit" value="Register">
     </form>
 
     Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    </div>
+    
 
 {% endblock %}
