--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -5,7 +5,7 @@
     <h2>Register</h2>
 
     {% if message %}
-        <div>{{ message }}</div>
+        <div class="alert alert-danger">{{ message }}</div>
     {% endif %}
 
     <div class="register">
