--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -2,6 +2,7 @@ textarea {
     min-height: 400px;
 }
  h2 {
+     margin-top: 2%;
      text-align: center;
  }
 .email-read, .email-unread {
@@ -18,8 +19,8 @@ textarea {
 
 .register, .login {
     border: 5px solid #e6e6e6;
-    padding: 10px;
+    padding: 15px;
     margin-top: 2%;
-    margin-left: 10%
-    margin-right: 10%
+    margin-left: 10%;
+    margin-right: 10%;
 }
