--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -30,6 +30,10 @@
             <input type="submit" class="my-2 btn btn-primary"/>
         </form>
     </div>
+
+    <div id="email-view">
+      <button id="email-unread-btn" class="btn-secondary">Mark as Unread</button>
+    </div>
 {% endblock %}
 
 {% block script %}
