finished all requirements

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -27,12 +27,11 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="my-2 btn btn-primary"/>
+            <input type="submit" class="my-2 btn btn-primary"value="Send"/>
         </form>
     </div>
 
     <div id="email-view">
-      <button id="email-unread-btn" class="btn-secondary">Mark as Unread</button>
     </div>
 {% endblock %}
 
