--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -35,9 +35,11 @@ textarea {
 }
 
 .register, .login {
-    border: 5px solid #e6e6e6;
+    border: 2px solid #e6e6e6;
     padding: 15px;
     margin-top: 2%;
     margin-left: 10%;
     margin-right: 10%;
+    /* box-shadow: 2px 2px 2px 2px; */
+    box-shadow: 0 5px 8px rgba(0, 0, 0, .25);
 }
